# iphone-call-export

./: .gitignore  Cargo.toml  README.md
crates/backup/: Cargo.toml
crates/backup/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs
crates/manifest/: Cargo.toml
crates/manifest/src/: call_history.rs  contacts.rs  crypto.rs  database.rs  lib.rs  payload.rs  unlock.rs
docs/: COMMERCIAL.md  MACOS_APP.md
macos/: CommercialShell.swift  IPhoneCallExportApp.swift
scripts/: install-macos-app.sh  issue-license.sh
