[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/backup",
    "crates/manifest",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
directories = "6"
plist = "1"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
