[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/backup",
    "crates/manifest",
    "crates/cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1"
aes = "0.8"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
csv = "1"
directories = "6"
indicatif = "0.17"
pbkdf2 = "0.12"
plist = "1"
rpassword = "7"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
sha1 = "0.10"
sha2 = "0.10"
tempfile = "3"
thiserror = "2"
zeroize = "1"

# Die Passwortableitung (10 Mio. PBKDF2-Runden) und AES-Dateientschlüsselung
# sind in einem ungeoptimierten Debug-Build unnötig langsam. Leichte Optimierung
# des eigenen Codes plus volle Optimierung der Abhängigkeiten hält brauchbare
# Debug-Informationen, beschleunigt aber den normalen `cargo run` deutlich.
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
