[package]
name = "iphone-call-export"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
indicatif.workspace = true
rpassword.workspace = true
tempfile.workspace = true
zeroize.workspace = true
iphone-call-export-backup = { path = "../backup" }
iphone-call-export-manifest = { path = "../manifest" }
